--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,19 +14,13 @@
         <link rel="stylesheet" href="https://bootswatch.com/5/lux/bootstrap.min.css">
     </head>
     <body>  
-<<<<<<< HEAD
     
 
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="#">{{'MetaUnivers'|trans}}</a>
-=======
       
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">MetaUnivers</a>
->>>>>>> 37d6d9587651de9a237f37ef5c5edf4623096913
+            <a class="navbar-brand" href="#">{{'MetaUnivers'|trans}}</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -34,16 +28,15 @@
             <div class="collapse navbar-collapse" id="navbarColor01">
               <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-<<<<<<< HEAD
                   <a class="nav-link active" href="/">{{'Bienvenue'|trans}}
-=======
-                  <a class="nav-link active" href="/">Home
->>>>>>> 37d6d9587651de9a237f37ef5c5edf4623096913
-                    <span class="visually-hidden">(current)</span>
+
+                    <span class="visually-hidden"></span>
                   </a>
                 </li>
                 <li class="nav-item">
-<<<<<<< HEAD
+                  <a class="nav-link active" href="/search">{{'Recherche avancé'|trans}} </a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link" href="#">{{'Publier un article'|trans}}</a>
                 </li>
                 <li class="nav-item">
@@ -54,38 +47,10 @@
                 </li>
                  <li class="nav-item">
                   <a class="nav-link" href="#">{{'Sur Nous'|trans}}</a>
-
-                </li>
-                
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">{{'Action'|trans}}</a>
-=======
-                  <a class="nav-link" href="#">Publier un article</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Connexion</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Liste des cryptos</a>
-                </li>
-                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Dropdown</a>
-                  <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Action</a>
->>>>>>> 37d6d9587651de9a237f37ef5c5edf4623096913
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Separated link</a>
-                  </div>
-                </li>
+                 </div>
+               </li>
+ 
               </ul>
-<<<<<<< HEAD
               <ul class="navbar-nav me-auto">
                 {% for locale in locales %} 
                 {% if locale != app.request.locale  %}
@@ -96,12 +61,9 @@
                 {% endif %}
                 {% endfor %}
                
-               </ul>
-             </div>
-=======
+              </ul>
              
             </div>
->>>>>>> 37d6d9587651de9a237f37ef5c5edf4623096913
           </div>
         </nav>
 
