--- a/templates/annonces/index.html.twig
+++ b/templates/annonces/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AnnoncesController!{% endblock %}
+{% block title %}Bienvenue Au monde des métaverse !{% endblock %}
 
 {% block body %}
 <style>
