--- a/templates/blog/crypto.html.twig
+++ b/templates/blog/crypto.html.twig
@@ -8,8 +8,8 @@
   <thead>
  
     <tr>
-      <th scope="col">Nom</th>
-      <th scope="col">Prix</th>
+      <th scope="col">{{'Nom'|trans}}</th>
+      <th scope="col">{{'Prix'|trans}}</th>
      
     </tr>
    
