--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,7 +4,6 @@
 
 {% block body %}
     <h1>{{'inscription'|trans}}</h1>
-    <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
         {{ form_row(registrationForm.email) }}
@@ -12,10 +11,7 @@
             label: 'Password'
         }) }}
 
-   
 
-        
-
-        <button type="submit" class="btn">Register</button>
+        <button type="submit" class="btn">{{"Register"|trans}}</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
